--- a/invessence/modules/web/src/main/resources/messages.properties
+++ b/invessence/modules/web/src/main/resources/messages.properties
@@ -98,8 +98,8 @@ invoice.email.template=${email_templates_dir}invoice.html~{0}~{1}~{2}
 
 
 # Logo.
-logo.invessence=/images/institution/InvessenceLogo.jpg
-logo.0=images/logo/InvessenceLogo.jpg
+logo.invessence=images/logo/InvessenceLogo.png
+logo.0=images/logo/InvessenceLogo.png
 company.0=Invessence Inc.
 logo.1=images/logo/generic2.jpg
 company.1=Generic Inc.
@@ -108,12 +108,12 @@ company.62=UOBKayHain
 
 phone.0=(201) 977-2704
 email.0=info@invessence.com
-theme.0=advisor
+theme.0=spark
 
 phone.1=(800) Phone no
 email.1=info@yourcompany.com
-theme.1=advisor
+theme.1=spark
 
 phone.62=+65 6536 9338
 email.62=contact@utrade.com.sg
-theme.62=blitzer
+theme.62=spark
