--- a/invessence/modules/web/src/main/resources/messages.properties
+++ b/invessence/modules/web/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 company.name=Invessence.com
 website.url=${tomcat.url}
 secure.url=${ssl.url}
+web.mode=${web.mode}
 
 #Message Titles (message title -> mt...)
 mtt=Thank you.
@@ -49,7 +50,7 @@ password.reset.email=\n \
 signup.email=Dear {0}, \n\n \
    Welcome to Invessence.com! \n \
  Your userid ({1}) is now registered. \n \
- please visit us at  \n {2}/setPassword.xhtml?u={3}&r={4} \n \
+ please visit us at  \n {2}/register.xhtml?u={3}&r={4} \n \
  You will be prompted to set your password.  Then you'll be able to logon. \n \
  If clicking on the link does not work, try copying and pasting it into your browser.\n \
  If you did not register for this service, please email us directly at info@invessence.com to resolve this issue. \n \
@@ -78,7 +79,10 @@ welcome.general=Provided below is a list of accounts you have created. \
 You can view/edit these accounts by clicking on the account name.  \
 Or you can click on Add Portfolio to create another account.
 
-password.set.success=Password has been updated.  \
+password.set.success=<h1>You are now registered!<h1>  \
+  <h4>Shall we start?<h4>.
+
+registered.success=Password has been updated.  \
   Click on Login button on upper right corner to get started.
 
 demouser.id.taken=This email address was already registered.   \
@@ -100,20 +104,22 @@ invoice.email.template=${email_templates_dir}invoice.html~{0}~{1}~{2}
 # Logo.
 logo.invessence=images/logo/InvessenceLogo.png
 logo.0=images/logo/InvessenceLogo.png
+homeURL.0=${apache.url}
 company.0=Invessence Inc.
-logo.1=images/logo/generic2.jpg
-company.1=Generic Inc.
-logo.62=images/logo/uobkh.png
-company.62=UOBKayHain
-
 phone.0=(201) 977-2704
 email.0=info@invessence.com
 theme.0=spark
 
+logo.1=images/logo/generic2.jpg
+homeURL.1=${apache.url}
+company.1=Generic Inc.
 phone.1=(800) Phone no
 email.1=info@yourcompany.com
 theme.1=spark
 
+logo.62=images/logo/uobkh.png
+homeURL.62=${apache.url}
+company.62=UOBKayHain
 phone.62=+65 6536 9338
 email.62=contact@utrade.com.sg
 theme.62=spark
