--- a/invessence/modules/web/src/main/resources/messages.properties
+++ b/invessence/modules/web/src/main/resources/messages.properties
@@ -108,14 +108,16 @@ homeURL.0=${apache.url}
 company.0=Invessence Inc.
 phone.0=(201) 977-2704
 email.0=info@invessence.com
-theme.0=spark
+theme.0=modena
+library.0=modena-layout
 
-logo.1=images/logo/generic2.jpg
+logo.1=images/logo/iAdvice.png
 homeURL.1=${apache.url}
-company.1=Generic Inc.
+company.1=iAdvice
 phone.1=(800) Phone no
-email.1=info@yourcompany.com
-theme.1=spark
+email.1=info@iAdvice.com
+theme.1=modena
+library.1=modena-layout
 
 logo.62=images/logo/uobkh.png
 homeURL.62=${apache.url}
@@ -123,3 +125,4 @@ company.62=UOBKayHain
 phone.62=+65 6536 9338
 email.62=contact@utrade.com.sg
 theme.62=spark
+library.62=spark-layout
