New Theme and New Look Version 4.0

--- a/invessence/modules/reports/src/main/resources/messages.properties
+++ b/invessence/modules/reports/src/main/resources/messages.properties
@@ -6,3 +6,4 @@ billing.email=To {0} {1}\n\n \
   Invessence \n
 
 billing.email.template=${email_templates_dir}invoice.html~{0}~{1}~{2}
+billing.path=${base.data.dir}/billing/
