--- a/ltam/modules/emailer/src/main/resources/messages.properties
+++ b/ltam/modules/emailer/src/main/resources/messages.properties
@@ -12,5 +12,5 @@ html.supportdesk.L1=<p>If you have any questions, please contact us <a href="mai
 html.supportdesk.L2=<p>If you have any questions, please contact us <a href="mailto:support@symbil.com">support@symbil.com</a></p>
 html.support.info=<p>If you have any questions, please contact us <a href="mailto:support@symbil.com">support@symbil.com</a></p>
 
-# 0-name,1-email
-html.welcome=${base.web.dir}/template/html/welcome.htm~{0}~{1}
+# 0-name,1-URL,2-email
+html.welcome=${base.web.dir}/template/html/welcome.htm~{0}~{1}~{2}
