--- a/ltam/modules/emailer/src/main/resources/messages.properties
+++ b/ltam/modules/emailer/src/main/resources/messages.properties
@@ -13,4 +13,4 @@ html.supportdesk.L2=<p>If you have any questions, please contact us <a href="mai
 html.support.info=<p>If you have any questions, please contact us <a href="mailto:support@symbil.com">support@symbil.com</a></p>
 
 # 0-name,1-URL,2-email
-html.welcome=${base.web.dir}/template/html/welcome.htm~{0}~{1}~{2}
+html.welcome=${email_templates_dir}/welcome.htm~{0}~{1}~{2}
