--- a/ltam/modules/web/src/main/resources/messages.properties
+++ b/ltam/modules/web/src/main/resources/messages.properties
@@ -41,7 +41,7 @@ txt.reset.info=We have send an email with a link to reset the password. Please c
 txt.password.reset.email=\n \
   We have received a request to reset your Symbil password. \
  To complete your request, please click on the below link and follow the instructions. \n\
-  {0}/setPassword.xhtml?u={1}&r={2}\n \
+  {0}/reset.xhtml?u={1}&r={2}\n \
 \n\
   If clicking on the link doesn't work, try copying and pasting it into your browser\n\
 \n\n \
@@ -63,7 +63,7 @@ txt.accountlocked.email=\n\
   Your account has been locked because of a maximum number of incorrect login attempts. \n \
   To unlock your account, please reset your password. \n \
   \n\n \
-  Please follow this link: {0}/setPassword.xhtml?u={1}&r={2}\n \
+  Please follow this link: {0}/reset.xhtml?u={1}&r={2}\n \
   to reset your password.\n \
   If clicking on the link does not work, try copying and pasting it into your browser.\n \
   \n\
