--- a/ltam/modules/emailer/src/main/resources/messages.properties
+++ b/ltam/modules/emailer/src/main/resources/messages.properties
@@ -2,6 +2,9 @@ company.name=Symbil.com
 website.url=${apache.url}
 secure.url=${ssl.url}
 
+supportdesk.L1="support@symbil.com"
+supportdesk.L2="support@symbil.com"
+
 # Text version of message
 txt.supportdesk.L1=If you have any questions, please contact us at support@symbil.com
 txt.supportdesk.L2=If you have any questions, please contact us at support@symbil.com
