--- a/invessence/modules/price-processor/src/main/resources/Messages.properties
+++ b/invessence/modules/price-processor/src/main/resources/Messages.properties
@@ -1,4 +1,4 @@
-email.sender=bhs@invessence.com
+email.sender=no-reply@invessence.com
 email.subject=EXCEPTION:PRICING MODULE
 email.receiver=support@invessence.com
 
